# SourVide

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: NativeUtils.c  NetSocket.c  NetSocket.h  TypeDef.h  com_vincent_sourvide_NativeUtils.h
app/src/main/res/anim/: air_speed_rotate.xml  timer_anim.xml  wind_anim.xml
app/src/main/res/drawable/: auto_selector.xml  bad_close_selector.xml  best_close_selector.xml  bg_page.xml  big_check_box.xml  btn_selector.xml  button_bg.xml  check_box.xml  circle_input_bg.xml  color_selector2.xml  config_progress_bg.xml  delay_off_selector.xml  delay_on_selector.xml  delay_panel_bg_selector.xml  delay_panel_normal_selector.xml  delay_panel_on_selector.xml  delaytask_left_arrow_selector.xml  delaytask_right_arrow_selector.xml  delete_selector.xml  device_icon_selector.xml  device_list_item_bg.xml  device_slight_selector.xml  device_state_off_selector.xml  device_state_on_selector.xml  divider.xml  img_bg.xml  kill_selector.xml  left_arrow.xml  list_item_bg.xml  list_item_bg_gray.xml  normal_close_selector.xml  open_selector.xml  option_selector.xml  right_arrow.xml  seek_img.xml  seek_img_effect_ch12.xml  selector_heat.xml  selector_list_item.xml  selector_mode_add.xml  selector_mode_add_select.xml  (+30 more)
app/src/main/res/drawable-hdpi/: point_check_box.xml  shape_white_rectangle_circle_corner.xml
app/src/main/res/drawable-xxhdpi/: Thumbs.db
app/src/main/res/layout/: about.xml  activity_main.xml  activity_test.xml  bl_seekbar_layout.xml  bl_timer_layout.xml  bl_timer_layout_t1.xml  (+36 more)
(+94 files in other folders)
